--- a/GreenPlatform-lv2/src/main/resources/templates/login/getBackPassword.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/login/getBackPassword.html
@@ -10,62 +10,56 @@
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
-    <link rel="stylesheet" href="/style/login/login.css">
+    <link rel="stylesheet" href="/style/login/getBackPassword.css">
 </head>
 <body>
 <header class="loginHeader">
-    <div class="container-fluid">
-        <div class="row mr-top-50">
-            <div class="col-md-4"></div>
-            <div class="col-md-4 col-xs-12">
-                <div class="panel panel-success">
-                    <div class="panel-heading text-center">
-                        <b>找回密码</b>
-                    </div>
-                    <div class="panel-body">
-                        <div id="registerForm">
-                            <div class="row">
-                                <div class="col-sm-8 col-xs-8">
-                                    <input type="text" class="form-control input-lg" id="cPhone" name="cPhone" placeholder="请输入电话号码">
-                                </div>
-                                <div class="col-sm-4 col-xs-4">
-                                    <input type="button" id="getVerificationCode" class="form-control input-lg btn-default" value="获取验证码" />
-                                </div>
-                            </div>
-                            <div class="row cVerification">
-                                <div class="col-sm-8 col-xs-8">
-                                    <input type="text" class="form-control input-lg" id="smsCode" name="smsCode" placeholder="请输入验证码">
-                                </div>
-                            </div>
-                            <div class="row inputPassword" hidden>
-                                <div class="col-sm-12">
-                                    <input type="password" class="form-control input-lg" value="aaaaaa" id="cPassword" name="cPassword" placeholder="设置你的登陆密码">
-                                </div>
-                            </div>
-                            <div class="row inputPassword" hidden>
-                                <div class="col-sm-12">
-                                    <input type="password" class="form-control input-lg" value="aaaaaa" id="cPassword1" name="cPassword1" placeholder="请再次输入你的密码">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <button type="submit" id="btnNext" class="btn btn-block btn-lg btn-primary">确定</button>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <a href="./login">返回密码登陆</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    <div class="loginBox">
+        <div class="login-title">
+            <h2>找回密码</h2>
+        </div>
+        <div class="login-content" id="registerForm">
+            <div class="row">
+                <div class="col-sm-8 col-xs-8">
+                    <input type="text" id="cPhone" name="cPhone" placeholder="请输入电话号码">
+                </div>
+                <div class="col-sm-4 col-xs-4">
+                    <button id="getVerificationCode">验证码</button>
                 </div>
             </div>
-            <div class="col-md-4 col-xs-1"></div>
+            <div class="row cVerification">
+                <div class="col-sm-8 col-xs-8">
+                    <input type="text" id="smsCode" name="smsCode" placeholder="请输入验证码">
+                </div>
+            </div>
+            <div class="row inputPassword" hidden>
+                <div class="col-sm-12">
+                    <input type="password" value="aaaaaa" id="cPassword" name="cPassword" placeholder="设置你的登陆密码">
+                </div>
+            </div>
+            <div class="row inputPassword" hidden>
+                <div class="col-sm-12">
+                    <input type="password" value="aaaaaa" id="cPassword1" name="cPassword1" placeholder="请再次输入你的密码">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <button type="submit" id="btnNext">确定</button>
+                </div>
+            </div>
+
+            <div class="row elseLink">
+                <div class="col-sm-12">
+                    <a href="./login">返回密码登陆</a>
+                </div>
+            </div>
 
         </div>
+
     </div>
 </header>
+
+
 <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
