--- a/GreenPlatform-lv2/src/main/resources/templates/login/loginAdmin.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/login/loginAdmin.html
@@ -16,7 +16,7 @@
 <header class="loginHeader">
     <div class="loginBox">
         <div class="login-title">
-            <h2>用户登陆</h2>
+            <h2>管理员登陆</h2>
         </div>
         <div class="login-content" id="loginForm">
             <div class="row">
@@ -38,12 +38,13 @@
                 <div class="col-sm-12">
                     <a href="/base/register">免费注册</a>
                     <a href="/base/getBackPassword">忘记密码</a>
-                    <a href="/base/loginAdmin">管理员登陆</a>
+                    <a href="/base/login">平台用户登陆</a>
                 </div>
             </div>
 
-        </div>
 
+
+        </div>
     </div>
 </header>
 
@@ -52,6 +53,6 @@
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/login/login.js"></script>
+<script src="/js/login/loginAdmin.js"></script>
 </body>
 </html>
