--- a/GreenPlatform-lv2/src/main/resources/templates/web/index.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/web/index.html
@@ -114,7 +114,7 @@
             $(".nvaBar li a").click(function(){
                 $("#iframe-page-content").attr("src","/base/"+$(this).attr("data-targetUrl"));
             });
-            $("#myAccount").click();
+            $("#home").click();
         });
     </script>
 </body>
