--- a/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/nlgl.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/nlgl.html
@@ -35,21 +35,21 @@
                     <td>捐赠记录</td>
                     <td></td>
                     <td align="right">
-                        <a href="/base/history?type=1" class="btn btn-success btn-sm">查询</a>
+                        <a id="jzjlBtn" class="btn btn-success btn-sm">查询</a>
                     </td>
                 </tr>
                 <tr>
                     <td>提现记录</td>
                     <td></td>
                     <td align="right">
-                        <a href="/base/history?type=2" class="btn btn-success btn-sm">查询</a>
+                        <a id="txjlBtn" class="btn btn-success btn-sm">查询</a>
                     </td>
                 </tr>
                 <tr>
                     <td>充值记录</td>
                     <td></td>
                     <td align="right">
-                        <a href="/base/history?type=3" class="btn btn-success btn-sm">查询</a>
+                        <a id="czjlBtn" class="btn btn-success btn-sm">查询</a>
                     </td>
                 </tr>
             </table>
@@ -84,6 +84,6 @@
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
 <script src="/publicJs/publicyw.js"></script>
-<script src="/js/web/nlRank.js"></script>
+<script src="/js/web/myAccount/nlgl.js"></script>
 </body>
 </html>
