--- a/GreenPlatform-lv2/src/main/resources/templates/plate/plateYhgl/edit.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/plateYhgl/edit.html
@@ -124,6 +124,6 @@
 <script src="/publicJs/publicCommon.js"></script>
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/plateYhgl/edit.js"></script>
+<script src="/js/plate/Yhgl/edit.js"></script>
 </body>
 </html>
