--- a/GreenPlatform-lv2/src/main/resources/templates/plate/qxgl/edit.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/qxgl/edit.html
@@ -77,6 +77,6 @@
 <script src="/publicJs/publicCommon.js"></script>
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/qxgl/edit.js"></script>
+<script src="/js/plate/qxgl/edit.js"></script>
 </body>
 </html>
