--- a/GreenPlatform-lv2/src/main/resources/templates/plate/qxgl/jssq.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/qxgl/jssq.html
@@ -62,6 +62,6 @@
 <script src="/publicJs/publicCommon.js"></script>
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/qxgl/jssq.js"></script>
+<script src="/js/plate/qxgl/jssq.js"></script>
 </body>
 </html>
