--- a/GreenPlatform-lv2/src/main/resources/templates/plate/qxgl/syyh.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/qxgl/syyh.html
@@ -56,6 +56,6 @@
 <script src="/publicJs/publicCommon.js"></script>
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/qxgl/syyh.js"></script>
+<script src="/js/plate/qxgl/syyh.js"></script>
 </body>
 </html>
