--- a/GreenPlatform-lv2/src/main/resources/templates/plate/rwgl/main.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/rwgl/main.html
@@ -79,6 +79,6 @@
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
 <script src="/publicJs/MdiWindow.js"></script>
-<script src="/js/rwgl/main.js"></script>
+<script src="/js/plate/rwgl/main.js"></script>
 </body>
 </html>
