--- a/GreenPlatform-lv2/src/main/resources/templates/plate/spgl/main.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/spgl/main.html
@@ -76,6 +76,6 @@
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
 <script src="/publicJs/MdiWindow.js"></script>
-<script src="/js/spgl/main.js"></script>
+<script src="/js/plate/spgl/main.js"></script>
 </body>
 </html>
