--- a/GreenPlatform-lv2/src/main/resources/templates/plate/yhgl/hmd.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/yhgl/hmd.html
@@ -96,6 +96,6 @@
 <script src="/publicJs/publicCommon.js"></script>
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/yhgl/hmd.js"></script>
+<script src="/js/plate/yhgl/hmd.js"></script>
 </body>
 </html>
