--- a/GreenPlatform-lv2/src/main/resources/templates/plate/yhgl/nltx.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/yhgl/nltx.html
@@ -209,6 +209,6 @@
 <script src="/publicJs/publicCommon.js"></script>
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/yhgl/nltx.js"></script>
+<script src="/js/plate/yhgl/nltx.js"></script>
 </body>
 </html>
