--- a/GreenPlatform-lv2/src/main/resources/templates/plate/ywjcdm/edit.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/ywjcdm/edit.html
@@ -110,6 +110,6 @@
 <script src="/publicJs/publicCommon.js"></script>
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/ywjcdm/edit.js"></script>
+<script src="/js/plate/ywjcdm/edit.js"></script>
 </body>
 </html>
