--- a/GreenPlatform-lv2/src/main/resources/templates/plate/yypz/edit.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/yypz/edit.html
@@ -104,6 +104,6 @@
 <script src="/publicJs/publicCommon.js"></script>
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/js/yypz/edit.js"></script>
+<script src="/js/plate/yypz/edit.js"></script>
 </body>
 </html>
