--- a/GreenPlatform-lv2/src/main/resources/templates/plate/yypz/main.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/yypz/main.html
@@ -84,6 +84,6 @@
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
 <script src="/publicJs/MdiWindow.js"></script>
-<script src="/js/yypz/main.js"></script>
+<script src="/js/plate/yypz/main.js"></script>
 </body>
 </html>
