--- a/GreenPlatform-lv2/src/main/resources/static/style/plate/index.css
+++ b/GreenPlatform-lv2/src/main/resources/static/style/plate/index.css
@@ -6,41 +6,40 @@ html,body{
     height: 100%;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
-.header-nav{
+
+/**
+上方header
+ */
+.title-box{
+    width: 100%;
     height: 50px;
     background: #1b6d85;
-}
-.header-nav-title{
-    color:#ffffff;
-    font-size: 20px;
     line-height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: #fff;
 }
-.plate-navbar-right a{
-    color:#ffffff;
-}
-.navbar-loginUser{
-    line-height: 50px;
-    color: #ffffff;
-    margin:0 20px;
-}
-.plate-navbar-right a:hover{
-    color: #333333;
-}
-.page-box .navbar-loginUser a:visited{
-    background: #1b6d85;
-    color: #ffffff;
-}
+
 /**
-左侧菜单栏
+主体内容
  */
-.center-content{
-    height: 92.5%;
-}
-.center-content-row{
+.content-box{
+    width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: row;
 }
-.center-left,.cneter-right{
+/*主体右侧内容 */
+.content-box-right{
+    width: 83%;
+}
+/*主体左侧菜单*/
+.content-box-left{
+    width: 17%;
     height: 100%;
     margin:0;
     padding: 0;
@@ -85,11 +84,19 @@ html,body{
 .nav_icon{
     margin-right: 10px;
 }
-/**
-右侧主体
- */
-.cneter-right{
-    padding: 10px 0 10px 10px;
-    background: transparent;
+
+
+
+/*终端尺寸适配*/
+@media screen and (max-width: 600px) {
+    /*主体右侧内容 */
+    .content-box-right{
+        width: 70%;
+    }
+    /*主体左侧菜单*/
+    .content-box-left{
+        width: 30%;
+    }
+
 }
 
