--- a/GreenPlatform-lv2/src/main/resources/static/style/web/certification.css
+++ b/GreenPlatform-lv2/src/main/resources/static/style/web/certification.css
@@ -1,56 +1,58 @@
-/*公共begin*/
-header{
+.loginHeader{
     position:fixed;
     top: 0;
     left: 0;
     width:100%;
     height:100%;
-    min-width: 800px;
-    z-index:-10;
-    zoom: 1;
-    background-color: #fff;
-    background: url("../../publicImg/systemBg.jpg") no-repeat;
+    background-color: #d4f1d3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.loginBox{
+    width: 90%;
+    height: 80%;
+    background: url("../../publicImg/login/bg.png");
     background-size: cover;
-    -webkit-background-size: cover;
-    -o-background-size: cover;
-    background-position: center 0;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.mr-top-100{
-    margin-top:100px;
+.loginBox h1{
+    color: #333333;
 }
-.mr-top-50{
-    margin-top: 50px;
+.login-content{
+    width: 100%;
+    height: 100%;
 }
-.float-right{
-    float: right;
-}
-.badge-warning{
-    background-color: #f0ad4e;
-}
-.badge-primary{
-    background-color: #337ab7;
-}
-/*公共end*/
-.certificationHeader{
-    height:100%;
-}
-#dataForm .row{
+.login-content input[type='text'],.login-content input[type='password'],.login-content button{
+    border: none;
+    background: none;
+    width: 100%;
+    height: 40px;
+    border: 2px solid #ffffff;
+    border-radius: 20px;
     margin-top: 10px;
+}
+.login-content input[type='text'],.login-content input[type='password']{
+    padding-left: 25px;
+    font-size: 16px;
+}
+.login-content button{
+    background: #67b168;
+    color: #fff;
+    font-size: 16px;
+}
+#btnReturnHome{
+    background: #1e88cf;
 }
 
 /*终端尺寸适配*/
 @media screen and (max-width: 600px) {
-    /* #registerForm .row{
-         height: 50px;
-         margin-bottom: 0;
-         margin-top: 5px;
-     }*/
-
     /*手机背景*/
-    header{
-        min-width: 350px;
-        background: url("../../publicImg/telBg.jpg") no-repeat;
-    }
-}
 
+
+
+}
 
