--- a/GreenPlatform-lv2/src/main/resources/static/style/web/myAccount/nlgl/jzjl.css
+++ b/GreenPlatform-lv2/src/main/resources/static/style/web/myAccount/nlgl/jzjl.css
@@ -49,11 +49,15 @@ html,body{
 .contentBoxWrap table thead tr{
     font-weight: bold;
 }
+.contentBoxWrap table,.contentBoxWrap table tbody{
+    width: 100%;
+    height: 100%;
+}
 
 /*遮罩层*/
 #commonInfo{
     z-index: 999;
-    width: 95%;
+    width: 50%;
     height: auto;
     position: absolute;
     top:50%;
@@ -82,6 +86,9 @@ html,body{
     }
     .footerBtn{
         width: 100%;
+    }
+    #commonInfo{
+        width: 95%;
     }
 
 }
