--- a/GreenPlatform-lv2/src/main/resources/templates/plate/nlgl/main.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/nlgl/main.html
@@ -14,63 +14,52 @@
     <style>
         html,body{
             width: 100%;
-            height: 98%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
         }
-        form{
-            height:45px;
-            line-height: 45px;
+        .search-box{
+            height: 10%;
+            line-height: 100%;
+            display: flex;
+            align-items: center;
         }
-        .center_right_main{
-            width: 100%;
-            height: 550px;
-        }
-        #gridbox{
-            width: 100%;
-            height: 96%;
-            padding: 0;
-            margin: 0;
-        }
-        #commonInfo{
-            z-index: 999;
-            width: 100%;
-            height: auto;
-            position: absolute;
-            top:50%;
-            text-align: center;
-            font-size: 18px;
-            color: #C6C6C6;
+        .grid-box{
+            height: 90%;
         }
     </style>
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <form class="form-inline">
-                <div class="form-group">
-                    <label for="cUsername">用户姓名：</label>
-                    <input type="text" class="form-control" id="cUsername" placeholder="请输入姓名">
-                </div>
-                <div class="form-group">
-                    <label for="nNlzlQ">能量总量：</label>
-                    <input type="text" class="form-control" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value" id="nNlzlQ" placeholder="请输入能量总量起">
-                </div>
-                <div class="form-group">
-                    <label for="nNlzlZ">至</label>
-                    <input type="text" class="form-control" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value" id="nNlzlZ" placeholder="请输入能量总量止">
-                </div>
-                <button type="button" class="btn btn-info" id="btnSearch">搜索</button>
-            </form>
+<div class="search-box">
+    <form class="form-inline">
+        <div class="form-group">
+            <label for="cUsername">用户姓名：</label>
+            <input type="text" class="form-control" id="cUsername" placeholder="请输入姓名">
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 center_right_main">
-            <div id="gridbox"></div>
-            <div id="commonInfo"></div>
-        </div>
-    </div>
+        <button type="button" class="btn btn-info" id="btnSearch">搜索</button>
+    </form>
 </div>
 
+
+<div class="grid-box table-responsive">
+    <table class="table" id="dataTbl">
+        <col width="20%">
+        <col width="30%">
+        <col width="20%">
+        <col width="30%">
+        <thead>
+            <tr class="info">
+                <th>序号</th>
+                <th>姓名</th>
+                <th>能量总量</th>
+                <th>备注</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+</div>
 
 
 <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
@@ -83,6 +72,6 @@
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
 <script src="/publicJs/MdiWindow.js"></script>
-<script src="/js/nlgl/main.js"></script>
+<script src="/js/plate/nlgl/main.js"></script>
 </body>
 </html>
