--- a/GreenPlatform-lv2/src/main/resources/templates/plate/yhgl/main.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/yhgl/main.html
@@ -83,6 +83,6 @@
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
 <script src="/publicJs/MdiWindow.js"></script>
-<script src="/js/yhgl/main.js"></script>
+<script src="/js/plate/yhgl/main.js"></script>
 </body>
 </html>
