--- a/GreenPlatform-lv2/src/main/resources/templates/plate/ywjcdm/main.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/ywjcdm/main.html
@@ -80,6 +80,6 @@
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
 <script src="/publicJs/MdiWindow.js"></script>
-<script src="/js/ywjcdm/main.js"></script>
+<script src="/js/plate/ywjcdm/main.js"></script>
 </body>
 </html>
