--- a/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/nlgl/czjl.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/nlgl/czjl.html
@@ -33,6 +33,7 @@
                 <table class="table">
                     <col width="30%">
                     <col width="15%">
+                    <col width="20%">
                     <col width="15%">
                     <col width="20%">
                     <thead>
